--- a/ai_auto/index.html
+++ b/ai_auto/index.html
@@ -12,10 +12,10 @@
 </head>
 
 <body>
-    <!-- Hero Section -->
+
     <section class="hero">
         <div class="container">
-            <h1 class="fade-in">🚗 Штучний Інтелект в Автомобілях</h1>
+            <h1 class="fade-in">🚗 Розумні автомобілі: ера штучного інтелекту</h1>
             <p class="fade-in">Революція транспорту: майбутнє вже сьогодні</p>
             <a href="#features" class="cta-button">
                 Дізнатися більше
@@ -23,7 +23,7 @@
         </div>
     </section>
 
-    <!-- About Section -->
+
     <section class="section">
         <div class="container">
             <h2 class="section-title">Що таке ШІ в автомобілях?</h2>
@@ -34,12 +34,11 @@
                     взаємодіяти з навколишнім середовищем без безпосереднього
                     втручання людини. Це включає автономне водіння, системи безпеки,
                     оптимізацію маршрутів та багато іншого.
-                </p>
             </div>
         </div>
     </section>
 
-    <!-- Features Section -->
+
     <section id="features" class="section features-section">
         <div class="container">
             <h2 class="section-title">Ключові технології ШІ</h2>
@@ -113,10 +112,7 @@
                         аварій спричинені людським фактором
                     </div>
                 </div>
-                <div class="stat-item">
-                    <div class="stat-number">90%</div>
-                    <div class="stat-label">зменшення аварій з ШІ</div>
-                </div>
+
                 <div class="stat-item">
                     <div class="stat-number">20%</div>
                     <div class="stat-label">економія палива</div>
@@ -180,7 +176,7 @@
         </div>
     </section>
 
-    <!-- Challenges Section -->
+
     <section class="section challenges-section">
         <div class="container">
             <h2 class="section-title">Виклики та проблеми</h2>
@@ -249,17 +245,20 @@
             </div>
         </div>
     </section>
-
-    <!-- Footer -->
     <footer class="footer">
         <div class="container">
             <div class="footer-content">
-                <h3>🚗 Штучний Інтелект в Автомобілях</h3>
-
+                <h2 class="whoDo">
+                    Виконав студент групи 1КН-25Б:
+                </h2>
+                <p class="name">Кульбачук В'ячеслав Анатолійович</p>
+                <p class="gmail">Електронна пошта: slavik534226@gmail.com</p>
             </div>
-
         </div>
     </footer>
+
+
+
 </body>
 
 </html>
