--- a/index.html
+++ b/index.html
@@ -1,118 +1,104 @@
+<!DOCTYPE html>
 <html lang="uk">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Штучний Інтелект в Автомобілях</title>
+    <title>Штучний інтелект в автомобілях</title>
     <link rel="stylesheet" href="main.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
+    <!-- Головний екран -->
     <section class="hero">
         <div class="container">
             <h1 class="fade-in">🚗 Розумні автомобілі: ера штучного інтелекту</h1>
             <p class="fade-in">Революція транспорту: майбутнє вже сьогодні</p>
-            <a href="#features" class="cta-button">
-                Дізнатися більше
-            </a>
+            <a href="#features" class="cta-button">Дізнатися більше</a>
         </div>
     </section>
 
-
-    <section class="section">
+    <!-- Про ШІ -->
+    <section class="section about-section">
         <div class="container">
-            <h2 class="section-title">Що таке ШІ в автомобілях?</h2>
+            <h2 class="section-title">Що таке ШІ в автомобілях</h2>
             <div class="about-content">
                 <p>
-                    Штучний інтелект в автомобілях - це технологія, яка дозволяє
-                    транспортним засобам приймати рішення, навчатися з досвіду та
-                    взаємодіяти з навколишнім середовищем без безпосереднього
-                    втручання людини. Це включає автономне водіння, системи безпеки,
-                    оптимізацію маршрутів та багато іншого.
+                    Штучний інтелект у сучасних автомобілях — це система, що аналізує навколишнє середовище,
+                    приймає рішення в реальному часі та допомагає уникати помилок, яких припускається людина.
+                    Це крок до повної автономії та безпеки на дорогах.
+                </p>
             </div>
         </div>
     </section>
 
-
+    <!-- Ключові технології -->
     <section id="features" class="section features-section">
         <div class="container">
             <h2 class="section-title">Ключові технології ШІ</h2>
             <div class="features-grid">
+
                 <div class="feature-card slide-in">
                     <div class="feature-icon">🤖</div>
                     <h3>Автопілот</h3>
-                    <p>
-                        Системи повного автономного водіння з використанням камер,
-                        радарів та лідарів для безпечного переміщення без втручання
-                        водія.
-                    </p>
+                    <p>Повністю автономне керування транспортом без втручання людини.</p>
+                    <a href="autopilot.html" class="cta-button small">Детальніше</a>
                 </div>
 
                 <div class="feature-card slide-in">
                     <div class="feature-icon">👁️</div>
                     <h3>Комп'ютерний зір</h3>
-                    <p>
-                        Розпізнавання об'єктів, пішоходів, дорожніх знаків та аналіз
-                        дорожньої ситуації в реальному часі.
-                    </p>
+                    <p>Розпізнавання об’єктів, пішоходів і знаків на дорозі в реальному часі.</p>
+                    <a href="vision.html" class="cta-button small">Детальніше</a>
                 </div>
 
                 <div class="feature-card slide-in">
                     <div class="feature-icon">🛡️</div>
                     <h3>Системи безпеки</h3>
-                    <p>
-                        Попередження про зіткнення, автоматичне гальмування та системи
-                        запобігання аваріям.
-                    </p>
+                    <p>ШІ контролює дистанцію, попереджає зіткнення і гальмує за потреби.</p>
+                    <a href="safety.html" class="cta-button small">Детальніше</a>
                 </div>
 
                 <div class="feature-card slide-in">
                     <div class="feature-icon">🗺️</div>
                     <h3>Розумна навігація</h3>
-                    <p>
-                        Оптимізація маршрутів з урахуванням трафіку, погодних умов та
-                        особистих уподобань.
-                    </p>
+                    <p>Вибір найкращого маршруту з урахуванням заторів, погоди і стилю водіння.</p>
+                    <a href="navigation.html" class="cta-button small">Детальніше</a>
                 </div>
 
                 <div class="feature-card slide-in">
                     <div class="feature-icon">⚡</div>
                     <h3>Енергоефективність</h3>
-                    <p>
-                        Оптимізація споживання палива та електроенергії на основі
-                        аналізу стилю водіння.
-                    </p>
+                    <p>Алгоритми оптимізують витрату енергії для зменшення викидів і витрат.</p>
+                    <a href="energy.html" class="cta-button small">Детальніше</a>
                 </div>
 
                 <div class="feature-card slide-in">
                     <div class="feature-icon">🗣️</div>
                     <h3>Голосове управління</h3>
-                    <p>
-                        Природна взаємодія з автомобілем через голосові команди та
-                        ШІ-асистентів.
-                    </p>
+                    <p>Водій може керувати функціями авто за допомогою голосу.</p>
+                    <a href="voice.html" class="cta-button small">Детальніше</a>
                 </div>
+
             </div>
         </div>
     </section>
 
-    <!-- Statistics Section -->
+    <!-- Статистика -->
     <section class="section stats-section">
         <div class="container">
             <h2 class="section-title">Статистика та факти</h2>
             <div class="stats-grid">
                 <div class="stat-item">
                     <div class="stat-number">94%</div>
-                    <div class="stat-label">
-                        аварій спричинені людським фактором
-                    </div>
+                    <div class="stat-label">аварій спричинені людським фактором</div>
                 </div>
-
+                <div class="stat-item">
+                    <div class="stat-number">90%</div>
+                    <div class="stat-label">зменшення аварій завдяки ШІ</div>
+                </div>
                 <div class="stat-item">
                     <div class="stat-number">20%</div>
                     <div class="stat-label">економія палива</div>
@@ -124,7 +110,6 @@
             </div>
         </div>
     </section>
-
     <!-- Benefits Section -->
     <section class="section benefits-section">
         <div class="container">
@@ -175,89 +160,42 @@
             </div>
         </div>
     </section>
-
-
-    <section class="section challenges-section">
-        <div class="container">
-            <h2 class="section-title">Виклики та проблеми</h2>
-            <div class="challenge-item">
-                <h4>Етичні питання</h4>
-                <p>
-                    Як ШІ повинен приймати рішення в критичних ситуаціях? Кого
-                    рятувати першим у випадку неминучої аварії?
-                </p>
-            </div>
-            <div class="challenge-item">
-                <h4>Кібербезпека</h4>
-                <p>
-                    Захист автомобільних систем від хакерських атак та забезпечення
-                    приватності даних користувачів.
-                </p>
-            </div>
-            <div class="challenge-item">
-                <h4>Правове регулювання</h4>
-                <p>
-                    Необхідність створення нових законів та стандартів для автономних
-                    транспортних засобів.
-                </p>
-            </div>
-            <div class="challenge-item">
-                <h4>Технічні обмеження</h4>
-                <p>
-                    Складності роботи ШІ в екстремальних погодних умовах та
-                    непередбачуваних ситуаціях.
-                </p>
-            </div>
-            <div class="challenge-item">
-                <h4>Економічні фактори</h4>
-                <p>
-                    Високі витрати на розробку та впровадження технологій ШІ в масове
-                    виробництво.
-                </p>
-            </div>
-        </div>
-    </section>
-
-    <!-- Future Section -->
+    <!-- Майбутнє -->
     <section class="section future-section">
         <div class="container">
             <h2 class="section-title">Майбутнє ШІ в автомобілях</h2>
             <p class="future-description">
-                Дорожня карта розвитку автономних транспортних засобів
+                У найближчі роки автомобілі стануть повністю автономними, а дороги — максимально безпечними.
             </p>
             <div class="timeline">
                 <div class="timeline-item">
-                    <div class="timeline-year">2024-2025</div>
-                    <p>Масове впровадження систем допомоги водієві (ADAS)</p>
+                    <div class="timeline-year">2025</div>
+                    <p>Активне тестування автопілотів 5 рівня.</p>
                 </div>
                 <div class="timeline-item">
-                    <div class="timeline-year">2026-2028</div>
-                    <p>Комерційне використання автономних таксі в містах</p>
+                    <div class="timeline-year">2027</div>
+                    <p>Інтеграція ШІ у вантажний транспорт і громадський сектор.</p>
                 </div>
                 <div class="timeline-item">
-                    <div class="timeline-year">2029-2032</div>
-                    <p>Повністю автономні автомобілі для приватного використання</p>
+                    <div class="timeline-year">2030</div>
+                    <p>Масове використання безпілотних авто у світі.</p>
                 </div>
                 <div class="timeline-item">
-                    <div class="timeline-year">2033-2035</div>
-                    <p>ШІ стає стандартом в 90% нових автомобілів</p>
+                    <div class="timeline-year">2035</div>
+                    <p>Розумні дороги, які спілкуються з автомобілями через ШІ.</p>
                 </div>
             </div>
         </div>
     </section>
+
+    <!-- Футер -->
     <footer class="footer">
-        <div class="container">
-            <div class="footer-content">
-                <h2 class="whoDo">
-                    Виконав студент групи 1КН-25Б:
-                </h2>
-                <p class="name">Кульбачук В'ячеслав Анатолійович</p>
-                <p class="gmail">Електронна пошта: slavik534226@gmail.com</p>
-            </div>
+        <div class="container footer-content">
+            <h3 class="whoDo">Виконав студент групи 1КН-25Б</h3>
+            <p class="name">Кульбачук В.А.</p>
+            <p class="gmail">📧 slavik534226@gmail.com</p>
         </div>
     </footer>
-
-
 
 </body>
 
