--- a/autopilot.html
+++ b/autopilot.html
@@ -9,16 +9,16 @@
 </head>
 <body>
 
-  <section class="hero">
-    <div class="container">
+  <section class="hero reveal">
+    <div class="container reveal">
       <h1>🤖 Автопілот</h1>
       <p>Технологія повного автономного водіння</p>
       <a href="index.html#features" class="cta-button">⬅ Повернутися назад</a>
     </div>
   </section>
 
-  <section class="section">
-    <div class="container">
+  <section class="section reveal">
+    <div class="container reveal">
       <h2 class="section-title">Як працює автопілот</h2>
       <p class="about-content">
         Автопілот використовує комбінацію камер, лідарів, радарів і GPS для створення цифрової карти середовища.
@@ -27,16 +27,17 @@
 
       <h2 class="section-title">Переваги</h2>
       <div class="benefits-grid">
-        <div class="benefit-item"><div class="benefit-icon">🧠</div><div><h4>Точність</h4><p>Система реагує швидше за людину.</p></div></div>
-        <div class="benefit-item"><div class="benefit-icon">🚘</div><div><h4>Безпечність</h4><p>Зниження кількості аварій.</p></div></div>
-        <div class="benefit-item"><div class="benefit-icon">⚙️</div><div><h4>Навчання</h4><p>ШІ вдосконалюється з досвідом.</p></div></div>
+        <div class="benefit-item reveal"><div class="benefit-icon">🧠</div><div><h4>Точність</h4><p>Система реагує швидше за людину.</p></div></div>
+        <div class="benefit-item reveal"><div class="benefit-icon">🚘</div><div><h4>Безпечність</h4><p>Зниження кількості аварій.</p></div></div>
+        <div class="benefit-item reveal"><div class="benefit-icon">⚙️</div><div><h4>Навчання</h4><p>ШІ вдосконалюється з досвідом.</p></div></div>
       </div>
     </div>
   </section>
 
   <footer class="footer">
-    <div class="container"><p>© 2025 Автопілот — ШІ в автомобілях</p></div>
+    <div class="container reveal"><p>© 2025 Автопілот — ШІ в автомобілях</p></div>
   </footer>
+  <script src="script.js"></script>
 
 </body>
 </html>
