--- a/safety.html
+++ b/safety.html
@@ -1,24 +1,26 @@
 <!DOCTYPE html>
 <html lang="uk">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Системи безпеки — ШІ в автомобілях</title>
   <link rel="stylesheet" href="main.css">
-   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
 
-  <section class="hero">
-    <div class="container">
+  <section class="hero reveal">
+    <div class="container reveal">
       <h1>🛡️ Системи безпеки</h1>
       <p>ШІ, що піклується про життя</p>
       <a href="index.html#features" class="cta-button">⬅ Повернутися назад</a>
     </div>
   </section>
 
-  <section class="section">
-    <div class="container">
+  <section class="section reveal">
+    <div class="container reveal">
       <h2 class="section-title">Функції систем</h2>
       <p class="about-content">
         ШІ в безпеці стежить за дорогою, передбачає потенційні зіткнення та автоматично гальмує.
@@ -27,16 +29,37 @@
 
       <h2 class="section-title">Переваги</h2>
       <div class="benefits-grid">
-        <div class="benefit-item"><div class="benefit-icon">⚠️</div><div><h4>Попередження аварій</h4><p>Зменшення ризику ДТП на 90%.</p></div></div>
-        <div class="benefit-item"><div class="benefit-icon">🧍</div><div><h4>Захист пішоходів</h4><p>ШІ реагує швидше, ніж людина.</p></div></div>
-        <div class="benefit-item"><div class="benefit-icon">💡</div><div><h4>Розумна реакція</h4><p>Система сама приймає рішення у критичний момент.</p></div></div>
+        <div class="benefit-item reveal">
+          <div class="benefit-icon">⚠️</div>
+          <div>
+            <h4>Попередження аварій</h4>
+            <p>Зменшення ризику ДТП на 90%.</p>
+          </div>
+        </div>
+  <div class="benefit-item reveal">
+          <div class="benefit-icon">🧍</div>
+          <div>
+            <h4>Захист пішоходів</h4>
+            <p>ШІ реагує швидше, ніж людина.</p>
+          </div>
+        </div>
+  <div class="benefit-item reveal">
+          <div class="benefit-icon">💡</div>
+          <div>
+            <h4>Розумна реакція</h4>
+            <p>Система сама приймає рішення у критичний момент.</p>
+          </div>
+        </div>
       </div>
     </div>
   </section>
 
   <footer class="footer">
-    <div class="container"><p>© 2025 Системи безпеки — ШІ в автомобілях</p></div>
+    <div class="container reveal">
+      <p>© 2025 Системи безпеки — ШІ в автомобілях</p>
+    </div>
   </footer>
-
+  <script src="script.js"></script>
 </body>
+
 </html>
