--- a/energy.html
+++ b/energy.html
@@ -9,16 +9,16 @@
 </head>
 <body>
 
-  <section class="hero">
-    <div class="container">
+  <section class="hero reveal">
+    <div class="container reveal">
       <h1>⚡ Енергоефективність</h1>
       <p>ШІ допомагає економити енергію</p>
       <a href="index.html#features" class="cta-button">⬅ Повернутися назад</a>
     </div>
   </section>
 
-  <section class="section">
-    <div class="container">
+  <section class="section reveal">
+    <div class="container reveal">
       <h2 class="section-title">Як це працює</h2>
       <p class="about-content">
         Алгоритми ШІ аналізують стиль водіння, стан дороги й навантаження на двигун, щоб оптимізувати витрати палива або електроенергії.
@@ -26,16 +26,17 @@
 
       <h2 class="section-title">Переваги</h2>
       <div class="benefits-grid">
-        <div class="benefit-item"><div class="benefit-icon">💰</div><div><h4>Економія</h4><p>Зменшення споживання енергії до 20%.</p></div></div>
-        <div class="benefit-item"><div class="benefit-icon">🌱</div><div><h4>Екологічність</h4><p>Менше викидів CO₂ у повітря.</p></div></div>
-        <div class="benefit-item"><div class="benefit-icon">🧮</div><div><h4>Оптимізація</h4><p>Система адаптується під умови руху.</p></div></div>
+        <div class="benefit-item reveal"><div class="benefit-icon">💰</div><div><h4>Економія</h4><p>Зменшення споживання енергії до 20%.</p></div></div>
+        <div class="benefit-item reveal"><div class="benefit-icon">🌱</div><div><h4>Екологічність</h4><p>Менше викидів CO₂ у повітря.</p></div></div>
+        <div class="benefit-item reveal"><div class="benefit-icon">🧮</div><div><h4>Оптимізація</h4><p>Система адаптується під умови руху.</p></div></div>
       </div>
     </div>
   </section>
 
   <footer class="footer">
-    <div class="container"><p>© 2025 Енергоефективність — ШІ в автомобілях</p></div>
+    <div class="container reveal"><p>© 2025 Енергоефективність — ШІ в автомобілях</p></div>
   </footer>
+  <script src="script.js"></script>
 
 </body>
 </html>
