--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
 
     <!-- Головний екран -->
-    <section class="hero">
-        <div class="container">
+    <section class="hero reveal">
+        <div class="container reveal">
             <h1 class="fade-in">🚗 Розумні автомобілі: ера штучного інтелекту</h1>
             <p class="fade-in">Революція транспорту: майбутнє вже сьогодні</p>
             <a href="#features" class="cta-button">Дізнатися більше</a>
@@ -21,14 +21,14 @@
     </section>
 
     <!-- Про ШІ -->
-    <section class="section about-section">
+    <section class="section about-section reveal">
         <div class="container">
-            <h2 class="section-title">Що таке ШІ в автомобілях</h2>
+            <h2 class="section-title">Штучний інтелект у сучасних автомобілях</h2>
             <div class="about-content">
                 <p>
-                    Штучний інтелект у сучасних автомобілях — це система, що аналізує навколишнє середовище,
-                    приймає рішення в реальному часі та допомагає уникати помилок, яких припускається людина.
-                    Це крок до повної автономії та безпеки на дорогах.
+                    це «мозок» машини, що бачить, чує й мислить. Він аналізує дорожню ситуацію, приймає миттєві рішення
+                    та допомагає уникнути помилок, яких часто припускається людина. Це впевнений крок до майбутнього, де
+                    авто стане не просто транспортом, а надійним партнером на дорозі.
                 </p>
             </div>
         </div>
@@ -40,42 +40,42 @@
             <h2 class="section-title">Ключові технології ШІ</h2>
             <div class="features-grid">
 
-                <div class="feature-card slide-in">
+                <div class="feature-card slide-in reveal">
                     <div class="feature-icon">🤖</div>
                     <h3>Автопілот</h3>
                     <p>Повністю автономне керування транспортом без втручання людини.</p>
                     <a href="autopilot.html" class="cta-button small">Детальніше</a>
                 </div>
 
-                <div class="feature-card slide-in">
+                <div class="feature-card slide-in reveal">
                     <div class="feature-icon">👁️</div>
                     <h3>Комп'ютерний зір</h3>
                     <p>Розпізнавання об’єктів, пішоходів і знаків на дорозі в реальному часі.</p>
                     <a href="vision.html" class="cta-button small">Детальніше</a>
                 </div>
 
-                <div class="feature-card slide-in">
+                <div class="feature-card slide-in reveal">
                     <div class="feature-icon">🛡️</div>
                     <h3>Системи безпеки</h3>
                     <p>ШІ контролює дистанцію, попереджає зіткнення і гальмує за потреби.</p>
                     <a href="safety.html" class="cta-button small">Детальніше</a>
                 </div>
 
-                <div class="feature-card slide-in">
+                <div class="feature-card slide-in reveal">
                     <div class="feature-icon">🗺️</div>
                     <h3>Розумна навігація</h3>
                     <p>Вибір найкращого маршруту з урахуванням заторів, погоди і стилю водіння.</p>
                     <a href="navigation.html" class="cta-button small">Детальніше</a>
                 </div>
 
-                <div class="feature-card slide-in">
+                <div class="feature-card slide-in reveal">
                     <div class="feature-icon">⚡</div>
                     <h3>Енергоефективність</h3>
                     <p>Алгоритми оптимізують витрату енергії для зменшення викидів і витрат.</p>
                     <a href="energy.html" class="cta-button small">Детальніше</a>
                 </div>
 
-                <div class="feature-card slide-in">
+                <div class="feature-card slide-in reveal">
                     <div class="feature-icon">🗣️</div>
                     <h3>Голосове управління</h3>
                     <p>Водій може керувати функціями авто за допомогою голосу.</p>
@@ -91,19 +91,19 @@
         <div class="container">
             <h2 class="section-title">Статистика та факти</h2>
             <div class="stats-grid">
-                <div class="stat-item">
+                <div class="stat-item reveal">
                     <div class="stat-number">94%</div>
                     <div class="stat-label">аварій спричинені людським фактором</div>
                 </div>
-                <div class="stat-item">
+                <div class="stat-item reveal">
                     <div class="stat-number">90%</div>
                     <div class="stat-label">зменшення аварій завдяки ШІ</div>
                 </div>
-                <div class="stat-item">
+                <div class="stat-item reveal">
                     <div class="stat-number">20%</div>
                     <div class="stat-label">економія палива</div>
                 </div>
-                <div class="stat-item">
+                <div class="stat-item reveal">
                     <div class="stat-number">2030</div>
                     <div class="stat-label">рік масового впровадження</div>
                 </div>
@@ -115,42 +115,42 @@
         <div class="container">
             <h2 class="section-title">Переваги ШІ в автомобілях</h2>
             <div class="benefits-grid">
-                <div class="benefit-item">
+                <div class="benefit-item reveal">
                     <div class="benefit-icon">✅</div>
                     <div>
                         <h4>Підвищення безпеки</h4>
                         <p>Зменшення кількості аварій та травматизму</p>
                     </div>
                 </div>
-                <div class="benefit-item">
+                <div class="benefit-item reveal">
                     <div class="benefit-icon">💰</div>
                     <div>
                         <h4>Економія коштів</h4>
                         <p>Зниження витрат на паливо та обслуговування</p>
                     </div>
                 </div>
-                <div class="benefit-item">
+                <div class="benefit-item reveal">
                     <div class="benefit-icon">🌍</div>
                     <div>
                         <h4>Екологічність</h4>
                         <p>Зменшення викидів шкідливих речовин</p>
                     </div>
                 </div>
-                <div class="benefit-item">
+                <div class="benefit-item reveal">
                     <div class="benefit-icon">♿</div>
                     <div>
                         <h4>Доступність</h4>
                         <p>Мобільність для людей з обмеженими можливостями</p>
                     </div>
                 </div>
-                <div class="benefit-item">
+                <div class="benefit-item reveal">
                     <div class="benefit-icon">⏰</div>
                     <div>
                         <h4>Економія часу</h4>
                         <p>Оптимізація маршрутів та зменшення пробок</p>
                     </div>
                 </div>
-                <div class="benefit-item">
+                <div class="benefit-item reveal">
                     <div class="benefit-icon">😌</div>
                     <div>
                         <h4>Комфорт</h4>
@@ -161,26 +161,26 @@
         </div>
     </section>
     <!-- Майбутнє -->
-    <section class="section future-section">
+    <section class="section future-section reveal">
         <div class="container">
             <h2 class="section-title">Майбутнє ШІ в автомобілях</h2>
             <p class="future-description">
                 У найближчі роки автомобілі стануть повністю автономними, а дороги — максимально безпечними.
             </p>
             <div class="timeline">
-                <div class="timeline-item">
+                <div class="timeline-item reveal">
                     <div class="timeline-year">2025</div>
                     <p>Активне тестування автопілотів 5 рівня.</p>
                 </div>
-                <div class="timeline-item">
+                <div class="timeline-item reveal">
                     <div class="timeline-year">2027</div>
                     <p>Інтеграція ШІ у вантажний транспорт і громадський сектор.</p>
                 </div>
-                <div class="timeline-item">
+                <div class="timeline-item reveal">
                     <div class="timeline-year">2030</div>
                     <p>Масове використання безпілотних авто у світі.</p>
                 </div>
-                <div class="timeline-item">
+                <div class="timeline-item reveal">
                     <div class="timeline-year">2035</div>
                     <p>Розумні дороги, які спілкуються з автомобілями через ШІ.</p>
                 </div>
@@ -190,12 +190,13 @@
 
     <!-- Футер -->
     <footer class="footer">
-        <div class="container footer-content">
+    <div class="container footer-content reveal">
             <h3 class="whoDo">Виконав студент групи 1КН-25Б</h3>
             <p class="name">Кульбачук В.А.</p>
             <p class="gmail">📧 slavik534226@gmail.com</p>
         </div>
     </footer>
+    <script src="script.js"></script>
 
 </body>
 
