--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 </header>
     <section class="hero reveal">
         <div class="container reveal">
-            <h1 class="fade-in" data-lang-key="hero_title">🚗 Розумні автомобілі: ера штучного інтелекту</h1>
+            <h1 class="fade-in" data-lang-key="hero_title"> Розумні автомобілі: ера штучного інтелекту</h1>
             <p class="fade-in" data-lang-key="hero_subtitle">Революція транспорту: майбутнє вже сьогодні</p>
             <a href="#features" class="cta-button" data-lang-key="hero_button">Дізнатися більше</a>
         </div>
