--- a/about.html
+++ b/about.html
@@ -23,6 +23,7 @@
                         <li><a href="research.html" data-lang-key="nav_research">Дослідження</a></li>
                         <li><a href="blog.html" data-lang-key="nav_blog">Блог</a></li>
                         <li><a href="about.html" data-lang-key="nav_about">Про проєкт</a></li>
+                        <li><a href="sources.html" data-lang-key="nav_sources">Джерела</a></li>
                     </ul>
                 </nav>
 
@@ -69,7 +70,7 @@
         </div>
     </section>
 
-    
+
     <script src="script.js"></script>
 </body>
 
