--- a/blog.html
+++ b/blog.html
@@ -23,6 +23,7 @@
                         <li><a href="research.html" data-lang-key="nav_research">Дослідження</a></li>
                         <li><a href="blog.html" data-lang-key="nav_blog">Блог</a></li>
                         <li><a href="about.html" data-lang-key="nav_about">Про проєкт</a></li>
+                        <li><a href="sources.html" data-lang-key="nav_sources">Джерела</a></li>
                     </ul>
                 </nav>
 
@@ -51,7 +52,7 @@
                     <h3>Мій досвід поїздки на Waymo: чи готовий я відмовитись від керма?</h3>
                     <p>Особисті враження від 30-хвилинної поїздки містом без водія. Плюси, мінуси та несподівані
                         моменти...</p>
-                    <a href="#" class="cta-button small">Читати далі</a>
+
                 </div>
 
                 <div class="news-item reveal">
@@ -59,14 +60,14 @@
                     <h3>Топ-5 міфів про автопілот, в які досі вірять</h3>
                     <p>Від "він бачить привидів" до "він може їздити за вас уві сні". Розбираємо найпопулярніші
                         помилкові уявлення...</p>
-                    <a href="#" class="cta-button small">Читати далі</a>
+
                 </div>
 
             </div>
         </div>
     </section>
 
-   
+
     <script src="script.js"></script>
 </body>
 
